--- a/FXExperienceControls/src/main/resources/styles/gradient_picker.css
+++ b/FXExperienceControls/src/main/resources/styles/gradient_picker.css
@@ -29,48 +29,72 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-#GridPane {
+
+.root-gradient {
     -fx-background-color: #31363B;
 }
 
-.button {
-    -fx-min-width: 30;
-    -fx-max-width: 30;
-    -fx-min-height: 30;
-    -fx-min-height: 30;
+.small-label {
+    -fx-font-size: 0.750em;
+    -fx-text-fill: derive(rgb(147, 147, 147), 25%);
+    -fx-padding: 0;
 }
 
-.rotation-dial {
-    -fx-background-radius: 100;
+.gradient-background {
+    -fx-border-color: -fx-box-border, #606060;
+    -fx-border-insets: 0, 1;
+    -fx-background-color: white;
+    -fx-background-image: url("../images/chequers.png");
+    -fx-background-position: center;
 }
 
-.rotation-handle {
-    -fx-background-color: null;
-    -fx-background-image: url("../images/rotate-handle.png");
-    -fx-background-repeat: no-repeat;
-    -fx-background-position: right;
+.check-box:determinate .box {
+    -fx-background-color: #2E3134, #2E3134, #2E3134, #2E3134;
+    -fx-border-color: #616569;
 }
 
-.LF3-textfield1 {
-    -fx-background-color: #31363B;
-    -fx-background-insets: 0, 1, 2;
-    -fx-background-radius: 3, 2, 2;
+.track-background {
+    -fx-background-color: derive(rgb(147, 147, 147), -21%), derive(rgb(147, 147, 147), -32%);
+    -fx-background-insets: 0, 1;
+}
+
+.choice-box {
+    -fx-background-color: #2E3134, #2E3134, #2E3134, #2E3134;
+    -fx-border-color: #616569;
+}
+
+.cycle-choice-box .open-button {
+    -fx-background-color: #2E3134;
+}
+
+.cycle-choice-box .context-menu {
+    -fx-text-fill: #C2C2C3;
+    -fx-background-color: #2E3134;
+}
+
+.cycle-choice-box .label {
+    -fx-text-fill: #C2C2C3;
+}
+
+.gradient-slider .track {
+    -fx-background-color: #2E3134;
+    -fx-border-color: #616569;
+    -fx-background-insets: -0.2, 1, 2;
+    -fx-background-radius: 3.2, 2, 2;
+    -fx-border-radius: 2.2, 2, 2;
+}
+
+.gradient-slider .thumb {
+    -fx-background-color: #424242;
     -fx-border-color: #717171;
-    -fx-padding: 3 5 3 5;
-    -fx-text-fill: #C2C2C3;
-    -fx-prompt-text-fill: #606060;
-    -fx-cursor: text;
+    -fx-border-radius: 20px;
 }
 
-.LF3-textfield1:focused {
-    -fx-background-color: #31363B;
-    -fx-background-insets: -0.4, 1, 2;
-    -fx-background-radius: 3.4, 2, 2;
+.gradient-slider .thumb:hover {
+    -fx-background-color: #2E3134, #2E3134, #2E3124;
 }
 
-.LF3-textfield1:disabled {
-    -fx-opacity: -fx-disabled-opacity;
+.gradient-slider .thumb {
+    -fx-fill: #2E3134;
 }
-.rotation-label {
-    -fx-text-fill: #C2C2C3;
-}
+
