--- a/FXExperienceControls/src/main/resources/styles/rotator_control.css
+++ b/FXExperienceControls/src/main/resources/styles/rotator_control.css
@@ -29,54 +29,49 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-.root {
-    -sb-base: rgb(147, 147, 147);
-    -sb-content-text-dimmed: derive(-sb-base, 25%);
-    -sb-content-background: derive(-sb-base, -10%);
-    -fx-focus-color: transparent;
-}
-
-.root-gradient {
+#GridPane {
     -fx-background-color: #31363B;
-
-}
-.small-label {
-    -fx-font-size: 0.750em;
-    -fx-text-fill: derive(rgb(147, 147, 147), 25%);
-    -fx-padding: 0;
 }
 
-.gradient-background {
-    -fx-border-color: -fx-box-border, #606060;
-    -fx-border-insets: 0, 1;
-    -fx-background-color: white;
-    -fx-background-image: url("../images/chequers.png");
-    -fx-background-position: center;
+.button {
+    -fx-min-width: 30;
+    -fx-max-width: 30;
+    -fx-min-height: 30;
+    -fx-min-height: 30;
 }
 
-.track-background {
-    -fx-background-color: derive(rgb(147, 147, 147), -21%), derive(rgb(147, 147, 147), -32%);
-    -fx-background-insets: 0, 1;
+.rotation-dial {
+    -fx-background-radius: 100;
+    -fx-background-color: #424242;
+    -fx-border-radius: 100;
+    -fx-border-color: #717171;
 }
 
-.slider .track {
-    -fx-background-color: #2E3134;
-    -fx-border-color: #616569;
-    -fx-background-insets: -0.2, 1, 2;
-    -fx-background-radius: 3.2, 2, 2;
-    -fx-border-radius: 2.2, 2, 2;
+.rotation-handle {
+    -fx-background-color: transparent;
+    -fx-background-image: url("../images/rotate-handle.png");
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: right;
 }
 
-.slide .thumb {
-    -fx-border-color: #616569;
-    -fx-border-radius: 20px;
-    -fx-background-color: #2E3134;
+.LF3-textfield1 {
+    -fx-background-color: #31363B;
+    -fx-background-insets: 0, 1, 2;
+    -fx-background-radius: 3, 2, 2;
+    -fx-border-color: #717171;
+    -fx-padding: 3 5 3 5;
+    -fx-text-fill: #C2C2C3;
+    -fx-prompt-text-fill: #606060;
+    -fx-cursor: text;
 }
 
-.slider .thumb:hover {
-    -fx-background-color: #2E3134, #2E3134, #2E3124;
-}
-.slider .thumb {
-    -fx-fill: #2E3134;
+.LF3-textfield1:focused {
+    -fx-background-color: #31363B;
 }
 
+.LF3-textfield1:disabled {
+    -fx-opacity: -fx-disabled-opacity;
+}
+.rotation-label {
+    -fx-text-fill: #C2C2C3;
+}
